--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,12 @@
-
-
+<html>
+  <head>
+  </head>
+  <body>
+    <div class="game">
+      <table id="game-table">
+      </table>
+      <button id="reset" style="height: 50px; width:50px">Reset</button>
+    </div>
+    <script src="./app.js"></script>
+  </body>
+</html>
