Update HTML to include status message

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -2,6 +2,7 @@
   <head>
   </head>
   <body>
+    <div id="status-ticker"></div>
     <div class="game">
       <table id="game-table">
       </table>
