--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,13 +1,16 @@
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="./style.css"></script>
   </head>
   <body>
-    <div id="status-ticker"></div>
+    
     <div class="game">
+      <div id="status-ticker"></div>
       <table id="game-table">
       </table>
-      <button id="reset" style="height: 50px; width:50px">Reset</button>
+      
     </div>
+    <button id="reset">Reset</button>
     <script src="./app.js"></script>
   </body>
 </html>
