Make JSON sent from client parse properly on server

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,15 @@
+<html>
+  <head>
 
+  </head>
+  <body>
+   <form name="json-submit" action="/upload_json" method="post">
+    <label for="json">Enter your JSON</label>
+    <textarea name="json">
 
+     </textarea>
+     <input type="submit" value="Submit">
+   </form>
+    <script src='./app.js'></script>
+  </body>
+</html>
