--- a/challenge_3/index.html
+++ b/challenge_3/index.html
@@ -2,6 +2,8 @@
   <head>
     <script src="node_modules/react/dist/react.js"></script>
     <script src="node_modules/react-dom/dist/react-dom.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="src/style.css">
   </head>
   <body>
     <div id="app"></div>
