--- a/challenge_2/home.html
+++ b/challenge_2/home.html
@@ -1,6 +1,10 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <script
+    src="https://code.jquery.com/jquery-3.4.1.js"
+    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous"></script>
   </head>
   <body>
    <form name="json-submit" action="/upload_json" method="post">
